deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duniversity-deployment
  namespace: college-ns
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: duniversity-app
  template:
    metadata:
      labels:
        app: duniversity-app
    spec:
      containers:
        - name: duniversity-cont
          image: shubha20/duniversity-college-portal-frontend:latest
          ports:
            - containerPort: 3000

          resources:
            requests: 
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          
          # env:
          #  - name: MYSQL_USER
          #    valueFrom:
          #     configMapKeyRef:
          #       name: mariadb-config
          #       key: DB_USER

          #   - name: MYSQL_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: mariadb-secret
          #         key: DB_PASSWORD

---
apiVersion: v1
kind: Service
metadata:
  name: duniversity-service
  namespace: college-ns
spec:
  selector:
    app: duniversity-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
