deployment/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: college-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: maria-db
  template:
    metadata:
      labels:
        app: maria-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:12-ubi
          ports:
            - containerPort: 3306
          
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql

            - name: mariadb-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mariadb-initdb
          configMap:
            name: mariadb-init

        - name: mariadb-data
          persistentVolumeClaim:
            claimName: duniversity-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: college-ns
spec:
  selector:
    app: maria-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
