deployment/mariadb-stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: college-ns
spec:
  selector:
    app: maria-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  ClusterIP: None
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-deployment
  namespace: college-ns
spec:
  serviceName: "mariadb-svc"
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: maria-db
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: maria-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mariadb
          image: mariadb:12-ubi
          ports:
            - containerPort: 3306
          
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql

            - name: mariadb-initdb
              mountPath: /docker-entrypoint-initdb.d

      volumes:
        - name: mariadb-initdb
          configMap:
            name: mariadb-init

  volumeClaimTemplates:
    metadata:
      - name : mariadb-data
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
